--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "react-scripts": "3.4.0"
   },
   "scripts": {
-    "start": "concurrently \"react-scripts start\" \"cd ../backend && npm start\"",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
