--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "mocha",
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "keywords": [
@@ -22,5 +22,11 @@
     "express": "^4.18.1",
     "mocha": "^10.0.0",
     "mongoose": "^6.4.2"
+  },
+  "engines": {
+    "node": "18.x"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
