--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,6 +13,10 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    
+    defaults:
+       run:
+         working-directory: ./backend/
 
     strategy:
       matrix:
@@ -26,7 +30,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: cd backend
+        cache-dependency-path: './backend/package-lock.json'
+
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
