--- a/backend/cloudbuild.yaml
+++ b/backend/cloudbuild.yaml
@@ -5,4 +5,6 @@ steps:
   args: ['test']
 - name: "gcr.io/cloud-builders/gcloud"
   args: ["app", "deploy"]
+options:
+  logging: CLOUD_LOGGING_ONLY
 timeout: "1600s"
