--- a/backend/cloudbuild.yaml
+++ b/backend/cloudbuild.yaml
@@ -1,10 +1,13 @@
 steps:
 - name: 'gcr.io/cloud-builders/npm'
   args: ['install']
+  dir: 'backend'
 - name: 'gcr.io/cloud-builders/npm'
   args: ['test']
+  dir: 'backend'
 - name: "gcr.io/cloud-builders/gcloud"
   args: ["app", "deploy"]
+  dir: 'backend'
 options:
   logging: CLOUD_LOGGING_ONLY
 timeout: "1600s"
