--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "ioredis": "^5.2.3",
     "mocha": "^10.0.0",
     "mongoose": "^6.4.2"
   },
